<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Mirakel</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact / report bug</string>
    <string name="action_contact_summary">Write us an e-mail!</string>
    <string name="no_date">No deadline</string>
    <string name="no_reminder">Set a reminder</string>
    <string name="no_lists">This task cannot be synced, because you have no lists</string>
    <string name="dateFormat" translatable="false">yyyy-MM-dd</string>
    <string name="dateTimeFormat" translatable="false">yyyy-MM-dd\'T\'HHmmss\'Z\'</string>
    <string name="humanDateTimeFormat">yyyy-MM-dd – kk:mm</string>
    <string name="speak">Speak</string>
    <string name="takePhoto">Take a photo</string>
    <string name="speak_lang_code">en-US</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Server">Server</string>
    <string name="NoNetwork">No network connection available.</string>
    <string name="wrong_sync_type">The sync-type is not supported!</string>
    <string name="action_sync_now">Sync Now</string>
    <string name="resync">Do you want to resync all tasks?</string>
    <string name="menu_sort_lists">Reorder lists</string>
    <string name="no_https">You should use https!</string>
    <string name="finish_sync">Finish sync</string>
    <string name="local_account">Local Account</string>
    <string name="inbox">Inbox</string>
    <string name="first_task">First task</string>
    <string name="tasks_new_str">New Task</string>
    <string name="task_change_prio_title">Change Priority</string>
    <string name="task_delete_content">Are you sure you want to delete %s?</string>
    <string name="task_menu_sorting">Sort tasks</string>
    <string name="task_sorting_title">Sort tasks by</string>
    <string name="task_empty">No task selected…</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="task_set_reminder">Set Reminder</string>
    <string name="action_undo">Undo the last Change</string>
    <string name="add_subtasks">Add subtask…</string>
    <string name="subtask_list_name">Subtasks</string>
    <string name="remove_files">Remove Files from Task</string>
    <string name="remove_files_summary">Do you want to remove %1$s from %2$s?</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="remove_subtask">Remove Subtask</string>
    <string name="subtask_add_options">Filter >></string>
    <string name="subtask_done">Task done?</string>
    <string name="subtask_reminder">Task with reminder?</string>
    <string name="subtask_content">Task with note?</string>
    <string name="add">Add</string>
    <string name="new_task">New Task</string>
    <string name="add_existing">Add existing Task</string>
    <string name="task_name">Task Name:</string>
    <string name="no_loop">Subtasks cannot form a loop</string>
    <string name="as_subtask">Add to a task</string>
    <string name="task_clone">Clone task</string>
    <string-array name="task_sorting_items">
        <item>Default</item>
        <item>Deadline</item>
        <item>Priority</item>
        <item>Created date</item>
        <item>First by priority, then by date</item>
    </string-array>
    <string-array name="task_actions_items">
        <item>Edit</item>
        <item>Move</item>
        <item>Delete</item>
    </string-array>
    <string name="dialog_move">Move Task</string>
    <string name="list_title">Lists</string>
    <string name="list_menu_new_list">New List</string>
    <string name="list_change_name_cont">New list title</string>
    <string name="list_change_name_title">Change list name</string>
    <string name="list_all">All Lists</string>
    <string name="list_today">Tasks today</string>
    <string name="list_week">This week</string>
    <string name="list_overdue">Overdue</string>
    <string name="list_delete_content">Are you sure you want to delete %s?</string>
    <string-array name="list_actions_items">
        <item>Select color</item>
        <item>Rename</item>
        <item>Delete</item>
        <item>Share</item>
    </string-array>
    <string name="menu_delete_list">Delete list</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_move_task">Move task</string>
    <string name="menu_edit_task">Edit task</string>
    <string name="menu_edit_list">Rename list</string>
    <string name="menu_do_task">Set task as done</string>
    <string name="offical_server_url">https://mirakel.azapps.de</string>
    <string name="title_settings">Settings</string>
    <string name="empty_list">No tasks</string>
    <string name="preferences">Preferences</string>
    <string name="notification_title_general">%1$d tasks in %2$s</string>
    <string name="notification_title_general_single">1 task in %s</string>
    <string name="notification_title_empty">Enjoy your day!</string>
    <string name="reminder_notification_title">To do: %s</string>
    <string name="reminder_notification_priority">Priority: %s</string>
    <string name="reminder_notification_list">List: %s</string>
    <string name="reminder_notification_due">Due: %s</string>
    <string name="reminder_notification_done">Done</string>
    <string name="reminder_notification_later">Later</string>
    <string name="reminder_notification_done_confirm">I have set the task as "done"</string>
    <string name="reminder_notification_later_confirm">I\'ll remind you in %d minutes</string>
    <string name="list_vanished">Yikes, the task has vanished. I\'m sorry…</string>
    <string name="task_vanished">Yikes, the list of the task has vanished. I\'m sorry…</string>
    <string name="message_try_later">Try to sync later</string>
    <string name="message_access_denied">Access denied!\nDid you use the right config file?</string>
    <string name="message_create_socket">Cannot create socket!\nDid you enable your network connection?</string>
    <string name="message_account_suspended">Your account is suspended!</string>
    <string name="message_parse_message">Cannot parse tasks – please write how this happened</string>
    <string name="message_message_error">Unknown response from the server – please write how this happened</string>
    <string name="wrong_config">It looks like you used a wrong config file</string>
    <string name="load_config">Select the config file for Taskwarrior</string>
    <string name="select_config">Select Taskwarrior config file</string>
    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_server_label">Server URL</string>
    <string name="login_activity_server_typ">Server type</string>
    <string-array name="server_typs">
        <item>Taskwarrior</item>
        <item>CalDav</item>
        <item>Mirakel</item>
    </string-array>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_ok_button">Sign in</string>
    <string name="login_activity_loginfail_text_both">The username or password is not valid. A Mirakel account is
        required. Please try again.</string>
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string name="login_activity_newaccount_text">Sign in to your %s-account.</string>
    <string name="ui_activity_authenticating">Authenticating…</string>
    <string name="ui_activity_title">Sign-in</string>
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s new</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more…</string>
    <string name="share_using">Share with</string>
    <string name="share_task">Share task</string>
    <string name="share_task_title_with_date">%1$s (%2$s)</string>
    <string name="share_task_title">%s</string>
    <string name="share_list">Share list</string>
    <string name="share_list_title">%1$s (%2$d)</string>
    <string name="share_footer">Shared with Mirakel\nThe free (like in freedom) ToDo–List tool for Android and the Web\nhttp://mirakel.azapps.de</string>
    <string name="search_hint">Search tasks</string>
    <string name="search">Search</string>
    <string name="search_result_title">Search for %s</string>
    <string name="contact_email">mirakel@azapps.de</string>
    <string name="contact_subject">Mirakel Bug-report/Contact request</string>
    <string name="contact_text">
<![CDATA[\n\n
--\n
Mirakel-version: %1$s\n
SDK-version: %2$d\n
Device: %3$s\n]]>
    </string>
    <string name="contact_no_client">No e-mail client installed</string>
    <string name="contact_chooser">Send e-mail&#8230;</string>
    <string name="backup_import_error">There was an error while importing the database</string>
    <string name="backup_import_ok">The import was fine - please restart Mirakel</string>
    <string name="backup_export_error">There was an error while exporting the database</string>
    <string name="backup_export_ok">Exported to %s</string>
    <string name="add_content">Add note…</string>
    <string name="task_has_content">Task with note</string>
    <string name="permission_group_desc">Permission for access Mirakel</string>
    <string name="permission_group_lbl">Mirakel permission</string>
    <string name="permission_read_lbl">Read data from Mirakel</string>
    <string name="permission_read_desc">Permission to read data from Mirakel</string>
    <string name="permission_write_lbl">Write data to Mirakel</string>
    <string name="permission_write_desc">Permission to write data to Mirakel</string>
    <string name="permission_read_write_lbl">Read/Write Mirakel-data</string>
    <string name="permission_read_write_desc">Permission to read data from and write data to Mirakel</string>
    <string name="crash_toast_text">Yikes! I crashed! Please start the app again, so I can send a message to my developer</string>
    <string name="crash_dialog_title">Mirakel has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is to press OK.</string>
    <string name="crash_dialog_comment_prompt">You can add a comment about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="message_from_server">Taskwarrior server has sent a message: %s</string>
    <string name="list_change_color">Change Color</string>
    <string name="set_color">Set Color</string>
    <string name="unset_color">No Color</string>
    <string name="add_files">Add file…</string>
    <string name="file_no_activity">I don\'t know, how to open this file – sorry</string>
    <string name="file_select">Select a file</string>
    <string name="file_vanished">No such file</string>
    <string name="file_default_title">Check out this file</string>
    <string name="photo_default_title">Check out this photo</string>
    <string name="audio_default_title">Listen to that!</string>
    <string name="edit">Edit</string>
    <string name="audio_record_stop">Stop recording</string>
    <string name="audio_record_title">Audio recording…</string>
    <string name="audio_record_message">Recording…</string>
    <string name="audio_playback_title">Audio playback…</string>
    <string name="audio_playback_select_title">What do you want to do?</string>
    <string name="audio_playback_pause">Pause</string>
    <string name="label">Label</string>
    <string name="forDue">Use it for due</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
</resources>