<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mirakel="http://schemas.android.com/apk/res-auto" >

    <EditTextPreference
        android:key="labelRecurring"
        android:title="@string/label" />

    <CheckBoxPreference
        android:key="forDue"
        android:title="@string/forDue" />

    <de.azapps.mirakel.settings.NumPickerPref
        android:key="recurring_min"
        android:title="@string/minute"
        mirakel:maximumValue="60"
        mirakel:minimumValue="0"
        mirakel:summaryString="@plurals/minutes" />
    <de.azapps.mirakel.settings.NumPickerPref
        android:key="recurring_hour"
        android:title="@string/hour"
        mirakel:maximumValue="24"
        mirakel:minimumValue="0"
        mirakel:summaryString="@plurals/hours" />
    <de.azapps.mirakel.settings.NumPickerPref
        android:key="recurring_day"
        android:title="@string/day"
        mirakel:maximumValue="31"
        mirakel:minimumValue="0"
        mirakel:summaryString="@plurals/days" />
    <de.azapps.mirakel.settings.NumPickerPref
        android:key="recurring_month"
        android:title="@string/month"
        mirakel:maximumValue="12"
        mirakel:minimumValue="0"
        mirakel:summaryString="@plurals/months" />
    <de.azapps.mirakel.settings.NumPickerPref
        android:key="recurring_year"
        android:title="@string/year"
        mirakel:maximumValue="100"
        mirakel:minimumValue="0"
        mirakel:summaryString="@plurals/years" />

</PreferenceScreen>