<!--
  Mirakel is an Android App for Managing your ToDo-Lists
  
  Copyright (c) 2013 Anatolij Zelenin, Georg Semmler.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:mirakel="http://schemas.android.com/apk/res-auto">
    
    <!--
    Sort
    Add
    Share
    Search
    -
    Reorder
    Delete List
    Sync
    Config
    Credits
    Bugreport
    -->
    
    <item
        android:id="@+id/task_sorting"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        mirakel:showAsAction="ifRoom|withText"
        android:title="@string/task_menu_sorting">
    </item>
    <item
        android:id="@+id/menu_undo"
        mirakel:showAsAction="never"
        android:title="@string/action_undo"/>
    <item
        android:id="@+id/menu_new_list"
        android:icon="@android:drawable/ic_menu_add"
        mirakel:showAsAction="ifRoom|withText"
        android:title="@string/list_menu_new_list">
    </item>
    <item
        android:id="@+id/share_list"
        android:icon="@android:drawable/ic_menu_share"
        mirakel:showAsAction="ifRoom|withText"
        android:title="@string/share_list">
    </item>
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        mirakel:showAsAction="ifRoom|withText"
        android:title="@string/search">
    </item>
    <!--  -->
    <item
        android:id="@+id/menu_sort_lists"
        android:checkable="true"
        mirakel:showAsAction="never"
        android:title="@string/menu_sort_lists"/>
    <item
        android:id="@+id/list_delete"
        android:icon="@android:drawable/ic_menu_delete"
        mirakel:showAsAction="ifRoom|withText"
        android:title="@string/menu_delete">
    </item>
    <item
        android:id="@+id/menu_sync_now_list"
        mirakel:showAsAction="never"
        android:title="@string/action_sync_now"/>
    <item
        android:id="@+id/menu_settings_list"
        mirakel:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_kill_button"
        mirakel:showAsAction="never"
        android:title="@string/kill_app"/>

</menu>
