<!--
  Mirakel is an Android App for Managing your ToDo-Lists
  
  Copyright (c) 2013-2014 Anatolij Zelenin, Georg Semmler.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mirakel="http://schemas.android.com/apk/res-auto" >

    <!--
    Add
    Sync
    Reorder
    Config
    Credits
    Bugreport
    -->

    <item
        android:id="@+id/menu_new_list"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/list_menu_new_list"
        mirakel:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_undo"
        android:title="@string/action_undo"
        mirakel:showAsAction="never"/>
    <item
        android:id="@+id/menu_sync_now"
        android:title="@string/action_sync_now"
        mirakel:showAsAction="never"/>
    <item
        android:id="@+id/menu_sort_lists"
        android:checkable="true"
        android:title="@string/menu_sort_lists"
        mirakel:showAsAction="never"/>
    <item
        android:id="@+id/menu_contact"
        android:title="@string/action_contact"
        mirakel:showAsAction="never"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        mirakel:showAsAction="never"/>
    <item
        android:id="@+id/menu_kill_button"
        android:title="@string/kill_app"
        mirakel:showAsAction="never"/>

</menu>