<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Mirakel is an Android App for managing your ToDo-Lists
  ~
  ~   Copyright (c) 2013-2015 Anatolij Zelenin, Georg Semmler.
  ~
  ~       This program is free software: you can redistribute it and/or modify
  ~       it under the terms of the GNU General Public License as published by
  ~       the Free Software Foundation, either version 3 of the License, or
  ~       any later version.
  ~
  ~       This program is distributed in the hope that it will be useful,
  ~       but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~       GNU General Public License for more details.
  ~
  ~       You should have received a copy of the GNU General Public License
  ~       along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.azapps.mirakel.new_ui.activities.MirakelActivity">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_close_search"
        android:icon="@drawable/ic_close_white_24dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_variant_white_18dp"
        android:title="@string/share_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort_lists"
        android:icon="@drawable/ic_sort_list_18dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_18dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sync_now"
        android:title="@string/action_sync_now"
        android:icon="@drawable/ic_sync_white_18dp"
        app:showAsAction="never"/>
</menu>
