<?xml version="1.0" encoding="utf-8"?>
<!--
  Mirakel is an Android App for Managing your ToDo-Lists
  
  Copyright (c) 2013-2014 Anatolij Zelenin, Georg Semmler.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
  

    
  <LinearLayout android:id="@+id/subtask_header" android:layout_height="wrap_content" android:layout_width="match_parent">
    

        
    <Button android:id="@+id/subtask_newtask" android:layout_height="match_parent" android:layout_weight="1" android:layout_width="0dp" android:text="@string/new_task" style="@style/Button"/>
    

        
    <View android:layout_height="match_parent" style="@style/buttonDivider"/>
    

        
    <Button android:ellipsize="end" android:id="@+id/subtask_select_old" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp" android:lines="1" android:text="@string/add_existing" android:textColor="@color/Grey" style="@style/Button"/>
    
    
  </LinearLayout>
  

    
  <ViewSwitcher android:id="@+id/subtask_switcher" android:layout_height="match_parent" android:layout_width="match_parent">
    

        
    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">
      

            
      <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/task_name"/>
      

            
      <EditText android:focusableInTouchMode="true" android:id="@+id/subtask_add_task_edit" android:imeOptions="actionSend" android:inputType="text" android:layout_height="wrap_content" android:layout_width="match_parent"/>
      
        
    </LinearLayout>
    

        
    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">
      

            
      <EditText android:drawableLeft="@android:drawable/ic_menu_search" android:ems="10" android:id="@+id/subtask_searchbox" android:inputType="text" android:layout_height="wrap_content" android:layout_width="match_parent">
        

                
        <requestFocus/>
        
            
      </EditText>
      

            
      <Button android:id="@+id/subtasks_options" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/subtask_add_options" style="@style/selectableButton"/>
      

            
      <LinearLayout android:id="@+id/subtask_option_wrapper" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
        

                
        <CheckBox android:id="@+id/subtask_done" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/subtask_done"/>
        

                
        <CheckBox android:id="@+id/subtask_reminder" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/subtask_reminder"/>
        

                
        <CheckBox android:id="@+id/subtask_content" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/subtask_content"/>
        

                
        <Button android:id="@+id/subtask_list" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/list_all"/>
        
            
      </LinearLayout>
      

            
      <ListView android:id="@+id/subtask_listview" android:layout_height="match_parent" android:layout_width="match_parent">
            </ListView>
      
        
    </LinearLayout>
    
    
  </ViewSwitcher>
  


</LinearLayout>
