<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2010, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * modifid by weiznich 2013
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="false" />
            <!-- Servertype -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_server_typ"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/server_typ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/server_typs" />

            <!-- Server-URL -->

            <ViewSwitcher
                android:id="@+id/switcher_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/login_mirakel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_activity_server_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/server_edit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Server"
                            android:inputType="textUri"
                            android:minWidth="250dip"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:text="@string/offical_server_url" />

                        <!-- Username -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_activity_username_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/username_edit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Email"
                            android:inputType="textEmailAddress"
                            android:minWidth="250dip"
                            android:scrollHorizontally="true"
                            android:singleLine="true" />

                        <!-- Password -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dip"
                            android:singleLine="true"
                            android:text="@string/login_activity_password_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/password_edit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:minWidth="250dip"
                            android:scrollHorizontally="true"
                            android:singleLine="true" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/login_taskwarrior"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/load_configfile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/load_config" />
                    </LinearLayout>
                </RelativeLayout>
            </ViewSwitcher>

            <TextView
                android:id="@+id/message_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="false" />

            <CheckBox
                android:id="@+id/resync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resync" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/login_button_frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c6c3c6"
        android:minHeight="54dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="4dip" >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="100dip"
            android:onClick="handleLogin"
            android:text="@string/login_activity_ok_button" />
    </FrameLayout>

</LinearLayout>